[gd_scene load_steps=7 format=3 uid="uid://co0un16lmxned"]

[ext_resource type="Script" uid="uid://cpjxe3rfo74ks" path="res://script/allybullet.gd" id="1_q5p22"]
[ext_resource type="Texture2D" uid="uid://dqu1xxwlnfvqb" path="res://assets/sprites/textures/bullet.png" id="2_67yj1"]
[ext_resource type="Shader" uid="uid://b2hvabvbesy1v" path="res://assets/materials/glow_red.gdshader" id="2_q5p22"]
[ext_resource type="Texture2D" uid="uid://5w5jaua7o6kj" path="res://assets/materials/red.png" id="3_xaiql"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fi64k"]
shader = ExtResource("2_q5p22")
shader_parameter/color_gradient = ExtResource("3_xaiql")
shader_parameter/size_effect = 0.7
shader_parameter/speed = 1.0
shader_parameter/highlight_strength = 0.8
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hagby"]
radius = 4.0
height = 10.0

[node name="Bullet" type="Area2D"]
script = ExtResource("1_q5p22")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_fi64k")
texture = ExtResource("2_67yj1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hagby")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
